--- a/campuslife.html
+++ b/campuslife.html
@@ -219,13 +219,18 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-12">
-                  <p>
-                    Eskisehir Technical University<br />
-                    Address: 123 Example Street, City, Country<br />
+                  <div>
+                    Eskisehir Technical University
+                </div>
+                <div>
+                    Address: 123 Example Street, City, Country
+                </div>
+                <div>
                     Email: sevdeseceer@gmail.com
-                  </p>
+                </div>
                 </div>
               </div>
+              <br>
               <div class="row">
                 <div class="col-md-12">
                   <p>
