--- a/documents.html
+++ b/documents.html
@@ -200,52 +200,52 @@
           <main class="row overflow-auto">
             <div class="col pt-4 text-center login-frame">
               <h3>--- Documents ---</h3>
-              <br />
+              <br/>
               <ul class="documents-list">
                 <li>
                   <a
-                    href="/downloadableDocuments/Dersten_Çekilme_Dilekcesi.doc"
+                    href="/downloadableDocuments/dilekce1.doc"
                     download
                     >Course withdrawal petition</a
                   >
                 </li>
                 <li>
                   <a
-                    href="/downloadableDocuments/Kayıt_dondurma_Dilekçesi.docx"
+                    href="/downloadableDocuments/dilekce2.doc"
                     download
                     >Registration suspension petition</a
                   >
                 </li>
                 <li>
                   <a
-                    href="/downloadableDocuments/Kontenjan_Talep_Formu.doc"
+                    href="/downloadableDocuments/dilekce3.docx"
                     download
                     >Quota request form</a
                   >
                 </li>
                 <li>
                   <a
-                    href="/downloadableDocuments/Mazeret_Sınavı_Dilekçesi.doc"
+                    href="/downloadableDocuments/dilekce4.doc"
                     download
                     >Make-up exam petition</a
                   >
                 </li>
                 <li>
                   <a
-                    href="/downloadableDocuments/Sınav_Çakışma_Bildirim Formu.doc"
+                    href="/downloadableDocuments/dilekce5.doc"
                     download
                     >Exam conflict notification form</a
                   >
                 </li>
                 <li>
                   <a
-                    href="/downloadableDocuments/hizmet_pasaportu_talep_formu_yeni.doc"
+                    href="/downloadableDocuments/dilekce6.doc"
                     download
                     >Service Passport Application Form</a
                   >
                 </li>
                 <li>
-                  <a href="/downloadableDocuments/taahhutname_2018.doc" download
+                  <a href="/downloadableDocuments/dilekce7.doc" download
                     >Commitment for Service Passport</a
                   >
                 </li>
@@ -256,13 +256,18 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-12">
-                  <p>
-                    Eskisehir Technical University<br />
-                    Address: 123 Example Street, City, Country<br />
+                  <div>
+                    Eskisehir Technical University
+                </div>
+                <div>
+                    Address: 123 Example Street, City, Country
+                </div>
+                <div>
                     Email: sevdeseceer@gmail.com
-                  </p>
+                </div>
                 </div>
               </div>
+              <br>
               <div class="row">
                 <div class="col-md-12">
                   <p>
