--- a/home.html
+++ b/home.html
@@ -262,51 +262,57 @@
               </div>
             </ul>
             <footer class="row bg-light py-4 pb-4 mt-auto text-center">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-12">
-                  <p>
-                    Eskisehir Technical University<br />
-                    Address: 123 Example Street, City, Country<br />
-                    Email: sevdeseceer@gmail.com
-                  </p>
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div>
+                      Eskisehir Technical University
+                  </div>
+                  <div>
+                      Address: 123 Example Street, City, Country
+                  </div>
+                  <div>
+                      Email: sevdeseceer@gmail.com
+                  </div>
+                  </div>
+                </div>
+                <br>
+                <div class="row">
+                  <div class="col-md-12">
+                    <p>
+                      &copy; 2024 Eskisehir Technical University. All rights
+                      reserved. | Designed by Sevde Secer.
+                    </p>
+                    <p>-- Our social media accounts --</p>
+                    <p>
+                      <a
+                        href="https://www.instagram.com/eskisehirteknikuniv?igsh=MWxoaTlpcmZqZXhwdQ=="
+                        target="_blank"
+                        ><i class="bi bi-instagram">Instagram</i></a
+                      >
+                      <a
+                        href="https://www.facebook.com/eskisehirteknikuniv"
+                        target="_blank"
+                        ><i class="bi bi-facebook">Facebook</i></a
+                      >
+                      <a
+                        href="https://www.linkedin.com/school/eskisehirteknikuniv/?originalSubdomain=tr"
+                        target="_blank"
+                        ><i class="bi bi-facebook">Linkedin</i></a
+                      >
+                      <a
+                        href="https://www.youtube.com/channel/UC-oGylb9E16KNqMnTP_kDoA"
+                        target="_blank"
+                        ><i class="bi bi-facebook">Youtube</i></a
+                      >
+                    </p>
+                  </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-md-12">
-                  <p>
-                    &copy; 2024 Eskisehir Technical University. All rights
-                    reserved. | Designed by Sevde Secer.
-                  </p>
-                  <p>-- Our social media accounts --</p>
-                  <p>
-                    <a
-                      href="https://www.instagram.com/eskisehirteknikuniv?igsh=MWxoaTlpcmZqZXhwdQ=="
-                      target="_blank"
-                      ><i class="bi bi-instagram">Instagram</i></a
-                    >
-                    <a
-                      href="https://www.facebook.com/eskisehirteknikuniv"
-                      target="_blank"
-                      ><i class="bi bi-facebook">Facebook</i></a
-                    >
-                    <a
-                      href="https://www.linkedin.com/school/eskisehirteknikuniv/?originalSubdomain=tr"
-                      target="_blank"
-                      ><i class="bi bi-facebook">Linkedin</i></a
-                    >
-                    <a
-                      href="https://www.youtube.com/channel/UC-oGylb9E16KNqMnTP_kDoA"
-                      target="_blank"
-                      ><i class="bi bi-facebook">Youtube</i></a
-                    >
-                  </p>
-                </div>
-              </div>
-            </div>
-          </footer>
+            </footer>
         </div>
       </div>
     </div>
+  </div>
   </body>
 </html>
