--- a/login.html
+++ b/login.html
@@ -194,7 +194,7 @@
           <main class="row overflow-auto">
             <div class="col pt-4 login-frame">
               <h3>--- Student Login ---</h3>
-              <br />
+              <br/>
               <form action="home.html" method="POST">
                 <div class="container-fluid">
                   <div class="row">
@@ -234,13 +234,18 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-12">
-                  <p>
-                    Eskisehir Technical University<br />
-                    Address: 123 Example Street, City, Country<br />
+                  <div>
+                    Eskisehir Technical University
+                </div>
+                <div>
+                    Address: 123 Example Street, City, Country
+                </div>
+                <div>
                     Email: sevdeseceer@gmail.com
-                  </p>
+                </div>
                 </div>
               </div>
+              <br>
               <div class="row">
                 <div class="col-md-12">
                   <p>
