--- a/scholarships.html
+++ b/scholarships.html
@@ -200,66 +200,68 @@
             <div class="col pt-4">
               <div class="container text-center">
                 <h3>--- Scholarships ---</h3>
-                <br />
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th scope="col">Scholarship Name</th>
-                      <th scope="col">Eligibility Criteria</th>
-                      <th scope="col">Amount</th>
-                      <th scope="col">Deadline</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>Merit Scholarship</td>
-                      <td>Top 10% of the class</td>
-                      <td>$1000</td>
-                      <td>22 May 2024</td>
-                    </tr>
-                    <tr>
-                      <td>Need-Based Scholarship</td>
-                      <td>Based on financial need</td>
-                      <td>$500</td>
-                      <td>20 May 2024</td>
-                    </tr>
-                    <tr>
-                      <td>STEM Scholarship</td>
-                      <td>
-                        Major in science, technology, engineering, or
-                        mathematics
-                      </td>
-                      <td>$1500</td>
-                      <td>19 May 2024</td>
-                    </tr>
-                    <tr>
-                      <td>Community Service Scholarship</td>
-                      <td>Active involvement in community service projects</td>
-                      <td>$750</td>
-                      <td>19 May 2024</td>
-                    </tr>
-                    <tr>
-                      <td>Minority Scholarship</td>
-                      <td>Belonging to underrepresented minority groups</td>
-                      <td>$1000</td>
-                      <td>16 May 2024</td>
-                    </tr>
-                    <tr>
-                      <td>Sports Scholarship</td>
-                      <td>Outstanding performance in sports</td>
-                      <td>$2000</td>
-                      <td>15 May 2024</td>
-                    </tr>
-                    <tr>
-                      <td>Arts Scholarship</td>
-                      <td>Demonstrated talent in visual or performing arts</td>
-                      <td>$1000</td>
-                      <td>11 May 2024</td>
-                    </tr>
-                  </tbody>
-                </table>
+                <br/>
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Scholarship Name</th>
+                        <th scope="col">Eligibility Criteria</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col">Deadline</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Merit Scholarship</td>
+                        <td>Top 10% of the class</td>
+                        <td>$1000</td>
+                        <td>22 May 2024</td>
+                      </tr>
+                      <tr>
+                        <td>Need-Based Scholarship</td>
+                        <td>Based on financial need</td>
+                        <td>$500</td>
+                        <td>20 May 2024</td>
+                      </tr>
+                      <tr>
+                        <td>STEM Scholarship</td>
+                        <td>
+                          Major in science, technology, engineering, or
+                          mathematics
+                        </td>
+                        <td>$1500</td>
+                        <td>19 May 2024</td>
+                      </tr>
+                      <tr>
+                        <td>Community Service Scholarship</td>
+                        <td>Active involvement in community service projects</td>
+                        <td>$750</td>
+                        <td>19 May 2024</td>
+                      </tr>
+                      <tr>
+                        <td>Minority Scholarship</td>
+                        <td>Belonging to underrepresented minority groups</td>
+                        <td>$1000</td>
+                        <td>16 May 2024</td>
+                      </tr>
+                      <tr>
+                        <td>Sports Scholarship</td>
+                        <td>Outstanding performance in sports</td>
+                        <td>$2000</td>
+                        <td>15 May 2024</td>
+                      </tr>
+                      <tr>
+                        <td>Arts Scholarship</td>
+                        <td>Demonstrated talent in visual or performing arts</td>
+                        <td>$1000</td>
+                        <td>11 May 2024</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
-              <br />
+              <br/>
               <div class="container text-center">
                 <p>
                   If you wish to apply for a scholarship, you can submit your
@@ -271,18 +273,23 @@
               </div>
             </div>
           </main>
-          <br />
+          <br/>
           <footer class="row bg-light py-4 pb-4 mt-auto text-center">
             <div class="container">
               <div class="row">
                 <div class="col-md-12">
-                  <p>
-                    Eskisehir Technical University<br />
-                    Address: 123 Example Street, City, Country<br />
+                  <div>
+                    Eskisehir Technical University
+                </div>
+                <div>
+                    Address: 123 Example Street, City, Country
+                </div>
+                <div>
                     Email: sevdeseceer@gmail.com
-                  </p>
+                </div>
                 </div>
               </div>
+              <br>
               <div class="row">
                 <div class="col-md-12">
                   <p>
