--- a/students.html
+++ b/students.html
@@ -197,11 +197,11 @@
         </div>
         <div class="col-9 d-flex flex-column h-sm-100 align-items-center">
 
-          <main class="row overflow-auto">
+          <div class="row overflow-auto">
             <div class="col pt-4">
               <img src="https://ogrencikulupleri.eskisehir.edu.tr/Uploads/ogrencikulupleri/images/FullSizeRender-1.jpeg" alt="">
             </div>
-        </main>
+          </div>
           <main class="row overflow-auto align-items-center">
             <div class="col-12 pt-4">
               <ul>
@@ -231,13 +231,18 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-12">
-                  <p>
-                    Eskisehir Technical University<br/>
-                    Address: 123 Example Street, City, Country<br/>
+                  <div>
+                    Eskisehir Technical University
+                </div>
+                <div>
+                    Address: 123 Example Street, City, Country
+                </div>
+                <div>
                     Email: sevdeseceer@gmail.com
-                  </p>
+                </div>
                 </div>
               </div>
+              <br>
               <div class="row">
                 <div class="col-md-12">
                   <p>
