--- a/university.html
+++ b/university.html
@@ -251,20 +251,20 @@
               </h2>
               <div class="row justify-content-center">
                 <div class="col-md-4">
-                  <div class="circle circle-blue">Arts<br />308</div>
+                  <div class="circle circle-blue">Arts<br/>308</div>
                 </div>
                 <div class="col-md-4">
-                  <div class="circle circle-red">Business<br />1429</div>
+                  <div class="circle circle-red">Business<br/>1429</div>
                 </div>
                 <div class="col-md-4">
-                  <div class="circle circle-green">Law<br />1241</div>
+                  <div class="circle circle-green">Law<br/>1241</div>
                 </div>
                 <div class="col-md-4">
-                  <div class="circle circle-yellow">Engineering<br />3167</div>
+                  <div class="circle circle-yellow">Engineering<br/>3167</div>
                 </div>
                 <div class="col-md-4">
                   <div class="circle circle-purple">
-                    Social Sciences<br />706
+                    Social Sciences<br/>706
                   </div>
                 </div>
               </div>
@@ -275,21 +275,21 @@
               </h2>
               <div class="row justify-content-center">
                 <div class="col-md-4">
-                  <div class="circle circle-blue">Professor<br />76</div>
+                  <div class="circle circle-blue">Professor<br/>76</div>
                 </div>
                 <div class="col-md-4">
                   <div class="circle circle-red">
-                    Associate Professor<br />49
+                    Associate Professor<br/>49
                   </div>
                 </div>
                 <div class="col-md-4">
                   <div class="circle circle-green">
-                    Foreign National<br />12
+                    Foreign National<br/>12
                   </div>
                 </div>
                 <div class="col-md-4">
                   <div class="circle circle-yellow">
-                    Research Assistant<br />97
+                    Research Assistant<br/>97
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -302,13 +302,18 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-12">
-                  <p>
-                    Eskisehir Technical University<br />
-                    Address: 123 Example Street, City, Country<br />
+                  <div>
+                    Eskisehir Technical University
+                </div>
+                <div>
+                    Address: 123 Example Street, City, Country
+                </div>
+                <div>
                     Email: sevdeseceer@gmail.com
-                  </p>
+                </div>
                 </div>
               </div>
+              <br>
               <div class="row">
                 <div class="col-md-12">
                   <p>
