--- a/academics.html
+++ b/academics.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="academic programs, courses, faculties, departments, Eskişehir Technical University"/>
+    <meta
+      name="description"
+      content="Explore the rich academic offerings at Eskişehir Technical University, including diverse faculties, departments, and a wide range of courses."
+    />
     <title>Academics</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -423,7 +430,7 @@
                 <div>Email: sevdeseceer@gmail.com</div>
               </div>
             </div>
-            <br />
+            <br>
             <div class="row">
               <div class="col-md-12">
                 <p>
