--- a/campuslife.html
+++ b/campuslife.html
@@ -2,8 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Campus Life</title>
+    <meta
+      name="description"
+      content="Explore the vibrant campus life at Eskisehir Technical University. Discover student activities, events, and facilities."
+    />
+    <meta
+      name="keywords"
+      content="campus life, student activities, events, facilities, Eskisehir Technical University"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
