--- a/documents.html
+++ b/documents.html
@@ -1,9 +1,18 @@
+Copy code
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Documents</title>
+    <meta
+      name="description"
+      content="Explore and download various documents and forms related to academic petitions and procedures at Eskisehir Technical University."
+    />
+    <meta
+      name="keywords"
+      content="documents, forms, academic petitions, Eskisehir Technical University"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -200,7 +209,7 @@
           <main class="row overflow-auto">
             <div class="col pt-4 text-center login-frame">
               <h3>--- Documents ---</h3>
-              <br/>
+              <br>
               <ul class="documents-list">
                 <li>
                   <a
