--- a/home.html
+++ b/home.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home</title>
+  <meta name="description" content="Welcome to Eskisehir Technical University's homepage. Explore announcements, events, and more." />
+  <meta name="keywords" content="Eskisehir Technical University, university, announcements, events, students, academics, campus life" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,7 +48,11 @@
             >
               <li class="nav-item">
                 <a href="home.html" class="nav-link px-sm-0 px-2">
-                  <span class="ms-1 d-none d-sm-inline" style="font-size: larger;">Home</span>
+                  <span
+                    class="ms-1 d-none d-sm-inline"
+                    style="font-size: larger"
+                    >Home</span
+                  >
                   <span class="ms-1 d-inline d-sm-none">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -200,63 +206,101 @@
         >
           <main class="row overflow-auto">
             <div class="col pt-4">
-              <img
-                src="/photos/estuFoto2.jpeg"
-                class=""
-                alt="estufoto"
-              />
+              <img src="/photos/estuFoto2.jpeg" class="" alt="estufoto" />
             </div>
           </main>
           <div>
-            <h4 class="text-center p-3 pt-5 ">--- Announcements ---</h4>
+            <h4 class="text-center p-3 pt-5">--- Announcements ---</h4>
             <ul>
               <div class="list-group border border-secondary m-4">
-                <a href="#" class="list-group-item list-group-item-action list-group-item flex-column align-items-start">
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item flex-column align-items-start"
+                >
                   <div class="d-flex w-100 justify-content-between">
                     <h5 class="mb-1">Career Fair with Giant Companies</h5>
                     <small>!! NEW !!</small>
                   </div>
-                  <p class="mb-1">Explore job opportunities and internships with top companies at our Career Fair event.</p>
+                  <p class="mb-1">
+                    Explore job opportunities and internships with top companies
+                    at our Career Fair event.
+                  </p>
                   <small>08.05.2024</small>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary flex-column align-items-start">
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item-secondary flex-column align-items-start"
+                >
                   <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Student Exchange Program with Leading Universities</h5>
+                    <h5 class="mb-1">
+                      Student Exchange Program with Leading Universities
+                    </h5>
                     <small class="text-muted">5 days ago</small>
                   </div>
-                  <p class="mb-1">Join our Student Exchange Program to experience diverse cultures and academic environments.</p>
+                  <p class="mb-1">
+                    Join our Student Exchange Program to experience diverse
+                    cultures and academic environments.
+                  </p>
                   <small class="text-muted">03.05.2024</small>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item flex-column align-items-start">
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item flex-column align-items-start"
+                >
                   <div class="d-flex w-100 justify-content-between">
                     <h5 class="mb-1">Volunteer Opportunity</h5>
                     <small class="text-muted">6 days ago</small>
                   </div>
-                  <p class="mb-1">Make a difference in your community by participating in our Volunteer Opportunity program.</p>
+                  <p class="mb-1">
+                    Make a difference in your community by participating in our
+                    Volunteer Opportunity program.
+                  </p>
                   <small class="text-muted">02.05.2024</small>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary flex-column align-items-start">
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item-secondary flex-column align-items-start"
+                >
                   <div class="d-flex w-100 justify-content-between">
                     <h5 class="mb-1">Tech Symposium 2024</h5>
                     <small>1 week ago</small>
                   </div>
-                  <p class="mb-1">Join leading experts and innovators at our Tech Symposium 2022 to explore the latest trends and technologies.</p>
+                  <p class="mb-1">
+                    Join leading experts and innovators at our Tech Symposium
+                    2022 to explore the latest trends and technologies.
+                  </p>
                   <small>01.05.2024</small>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item flex-column align-items-start">
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item flex-column align-items-start"
+                >
                   <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Art Exhibition: "Expressions of Nature"</h5>
+                    <h5 class="mb-1">
+                      Art Exhibition: "Expressions of Nature"
+                    </h5>
                     <small class="text-muted">2 weeks ago</small>
                   </div>
-                  <p class="mb-1">Experience the beauty of nature through art at our "Expressions of Nature" exhibition.</p>
+                  <p class="mb-1">
+                    Experience the beauty of nature through art at our
+                    "Expressions of Nature" exhibition.
+                  </p>
                   <small class="text-muted">24.04.2024</small>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary flex-column align-items-start">
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item-secondary flex-column align-items-start"
+                >
                   <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Guest Lecture Series: "Future of Sustainability"</h5>
+                    <h5 class="mb-1">
+                      Guest Lecture Series: "Future of Sustainability"
+                    </h5>
                     <small class="text-muted">3 weeks ago</small>
                   </div>
-                  <p class="mb-1">Join us for insightful discussions on the future of sustainability with leading experts.</p>
+                  <p class="mb-1">
+                    Join us for insightful discussions on the future of
+                    sustainability with leading experts.
+                  </p>
                   <small class="text-muted">17.04.2024</small>
                 </a>
               </div>
@@ -265,18 +309,12 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-12">
-                    <div>
-                      Eskisehir Technical University
-                  </div>
-                  <div>
-                      Address: 123 Example Street, City, Country
-                  </div>
-                  <div>
-                      Email: sevdeseceer@gmail.com
-                  </div>
+                    <div>Eskisehir Technical University</div>
+                    <div>Address: 123 Example Street, City, Country</div>
+                    <div>Email: sevdeseceer@gmail.com</div>
                   </div>
                 </div>
-                <br>
+                <br />
                 <div class="row">
                   <div class="col-md-12">
                     <p>
@@ -310,9 +348,9 @@
                 </div>
               </div>
             </footer>
+          </div>
         </div>
       </div>
     </div>
-  </div>
   </body>
 </html>
