--- a/login.html
+++ b/login.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Student Login</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Student Login</title>
+  <meta name="description" content="Student login page for Eskisehir Technical University">
+  <meta name="keywords" content="student, login, university, Eskisehir Technical University">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -194,7 +196,7 @@
           <main class="row overflow-auto">
             <div class="col pt-4 login-frame">
               <h3>--- Student Login ---</h3>
-              <br/>
+              <br>
               <form action="home.html" method="POST">
                 <div class="container-fluid">
                   <div class="row">
