--- a/scholarships.html
+++ b/scholarships.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scholarship</title>
+    <meta name="description" content="Explore various scholarships offered by Eskisehir Technical University.">
+    <meta name="keywords" content="scholarships, financial aid, university scholarships, merit scholarship, need-based scholarship, STEM scholarship, community service scholarship, minority scholarship, sports scholarship, arts scholarship">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -200,7 +202,7 @@
             <div class="col pt-4">
               <div class="container text-center">
                 <h3>--- Scholarships ---</h3>
-                <br/>
+                <br>
                 <div class="table-responsive">
                   <table class="table">
                     <thead>
@@ -261,7 +263,7 @@
                   </table>
                 </div>
               </div>
-              <br/>
+              <br>
               <div class="container text-center">
                 <p>
                   If you wish to apply for a scholarship, you can submit your
@@ -273,7 +275,7 @@
               </div>
             </div>
           </main>
-          <br/>
+          <br>
           <footer class="row bg-light py-4 pb-4 mt-auto text-center">
             <div class="container">
               <div class="row">
