--- a/students.html
+++ b/students.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Students</title>
+    <meta name="description" content="Eskisehir Technical University website showcasing various clubs and activities." />
+    <meta name="keywords" content="Eskisehir Technical University, clubs, activities, students, university life" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
