--- a/university.html
+++ b/university.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>University</title>
+    <meta name="description" content="Eskişehir Technical University - A leading institution in education and research">
+    <meta name="keywords" content="Eskişehir, Technical University, education, research, science, culture">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -251,20 +253,20 @@
               </h2>
               <div class="row justify-content-center">
                 <div class="col-md-4">
-                  <div class="circle circle-blue">Arts<br/>308</div>
+                  <div class="circle circle-blue">Arts<br>308</div>
                 </div>
                 <div class="col-md-4">
-                  <div class="circle circle-red">Business<br/>1429</div>
+                  <div class="circle circle-red">Business<br>1429</div>
                 </div>
                 <div class="col-md-4">
-                  <div class="circle circle-green">Law<br/>1241</div>
+                  <div class="circle circle-green">Law<br>1241</div>
                 </div>
                 <div class="col-md-4">
-                  <div class="circle circle-yellow">Engineering<br/>3167</div>
+                  <div class="circle circle-yellow">Engineering<br>3167</div>
                 </div>
                 <div class="col-md-4">
                   <div class="circle circle-purple">
-                    Social Sciences<br/>706
+                    Social Sciences<br>706
                   </div>
                 </div>
               </div>
@@ -275,25 +277,25 @@
               </h2>
               <div class="row justify-content-center">
                 <div class="col-md-4">
-                  <div class="circle circle-blue">Professor<br/>76</div>
+                  <div class="circle circle-blue">Professor<br>76</div>
                 </div>
                 <div class="col-md-4">
                   <div class="circle circle-red">
-                    Associate Professor<br/>49
+                    Associate Professor<br>49
                   </div>
                 </div>
                 <div class="col-md-4">
                   <div class="circle circle-green">
-                    Foreign National<br/>12
+                    Foreign National<br>12
                   </div>
                 </div>
                 <div class="col-md-4">
                   <div class="circle circle-yellow">
-                    Research Assistant<br/>97
+                    Research Assistant<br>97
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="circle circle-purple">Assistant<br />106</div>
+                  <div class="circle circle-purple">Assistant<br>106</div>
                 </div>
               </div>
             </div>
